infrastructure/aks/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moviedbserver
spec:
  selector: # Define the wrapping strategy
    matchLabels: # Match all pods with the defined labels
      app: moviedbserver # Labels follow the `name: value` template
  template: # This is the template of the pod inside the deployment
    metadata:
      labels:
        app: moviedbserver
    spec:
      containers:
        - image: acrmoviedbdevne.azurecr.io/moviedbserver:latest # Add your ACR login server from step 3 here
          name: moviedbserver
          ports:
            - containerPort: 8080
