infrastructure/aks/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moviedbserver
spec:
  type: ClusterIP
  selector:
    app: moviedbserver
  ports:
    - port: 80 # SERVICE exposed port
      name: http # SERVICE port name
      protocol: TCP # The protocol the SERVICE will listen to
      targetPort: 8080  # Container exposed port
