infrastructure/aks/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moviedb
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: moviedb.myaks-8plwe4zr.hcp.northeurope.azmk8s.io
    http:
      paths:
      - path: / # Which path is this rule referring to
        pathType: Prefix
        backend: # How the ingress will handle the requests
          service:
            name: moviedb # Which service the request will be forwarded to
            port: 
              name: http # Which port in that service
